--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<link href="https://fonts.googleapis.com/css?family=PT+Mono&amp;subset=latin-ext" rel="stylesheet">
+<style>
+  body {
+    font-family: 'PT Mono', monospace;
+    color: rgba(0, 0, 0, 0.87);
+  }
+</style>
 <pre>
 ╔═════════════╗
 ║ Hello World ║
