--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=PT+Mono&amp;subset=latin-ext" rel="stylesheet">
 <style>
-  body {
+  body, pre {
     font-family: 'PT Mono', monospace;
     color: rgba(0, 0, 0, 0.87);
   }
