--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<link href="https://fonts.googleapis.com/css?family=PT+Mono&amp;subset=latin-ext" rel="stylesheet">
 <style>
-  body, pre {
-    font-family: 'PT Mono', monospace;
-    color: rgba(0, 0, 0, 0.87);
+  html, body {
+    position: relative;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .hello {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 </style>
-<pre>
+<pre class="hello">
 ╔═════════════╗
 ║ Hello World ║
 ╚═════════════╝
