--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-style: double;
+    padding: 1em;
   }
 </style>
-<pre class="hello">
-╔═════════════╗
-║ Hello World ║
-╚═════════════╝
-</pre>
+<p class="hello">Hello World</pre>
