--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   }
   
   .hello {
+    font-family: monospace;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-style: double;
-    padding: 1em;
+    padding: 0.5em;
   }
 </style>
 <p class="hello">Hello World</pre>
