--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     transform: translate(-50%, -50%);
     border-style: double;
     padding: 0.5em;
+    text-align: center;
   }
 </style>
 <p class="hello">Hello World</pre>
