--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>𝚑𝚎𝚕𝚕𝚘 𝚠𝚘𝚛𝚕𝚍</title>
 <style>
   html, body {
     position: relative;
@@ -17,4 +18,4 @@
     text-align: center;
   }
 </style>
-<p class="hello">Hello World</pre>
+<p class="hello">hello world</pre>
