--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="icon" href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCA1MCA1MCc+CiAgPHJlY3Qgd2lkdGg9IjUwIiBoZWlnaHQ9IjUwIi8+Cjwvc3ZnPg=="/>
 <title>𝚑𝚎𝚕𝚕𝚘 𝚠𝚘𝚛𝚕𝚍</title>
 <style>
   html, body {
